[project]
name = "atp-prediction-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "ruff>=0.14.10",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
]
